--- a/SI642_BonoCorporativo/Web.config
+++ b/SI642_BonoCorporativo/Web.config
@@ -60,8 +60,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="SI642_Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-86BQNQIJ;initial catalog=SI642;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <add name="SI642_Entities" connectionString="Server=tcp:isw.database.windows.net,1433;Initial Catalog=SI642;Persist Security Info=False;User ID=andres;Password={CooperPeru24};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
+  <add name="SI642Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=isw.database.windows.net;initial catalog=SI642;user id=andres;password=CooperPeru24;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
